--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </head>
 <body>
 <div id="app">
-    <h1 id="main-header">Moja aplikacja</h1>
-    <p>To będzie gra. A oto co muszę zrobić:</p>
+    <h1 id="main-header">Refleksomierzacz</h1>
+    <p>Witaj w grze, która pozwoli zmierzyć Twój refleks!</p>
     <ol>
         <li class="boring">Nauczyć się HTML</li>
         <li class="boring">Nauczyć się CSS</li>
